<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Retriever</string>
    <string name="title_header">Contact Retriever</string>
    <string name="title_footer">Retriever</string>
    
    <string name="content_description">Contact Retriever</string>

    <!-- Global -->
    <string name="label_loading_message">Wait. :)</string>
    <string name="label_enter">Enter</string>
    <string name="label_ok">OK</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_save">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_invalid_value">Invalid value</string>
    <string name="label_change">Change</string>
    <string name="label_gotit">Got it</string>
    <string name="label_readmore">Read more</string>
    <string name="label_alert_notification_title">Attention</string>
    <string name="label_alert_notification">Due to integration of Hangouts with the SMS application made ​​by Google it is possible that the application does not work properly because Google has not released tools to integrate with Hangouts. If you want to know more, click \'Read more\' and read the last section of the website.</string>
    
    <!-- Principal -->
    <string name="label_create_master_password">Create Master Password</string>
    <string name="label_type_master_password">Type master password</string>
    <string name="label_mail_recover_master_password">Email to recover master password</string>
    <string name="label_recover_master_password">Recover Master Password</string>
    <string name="label_settings">Settings</string>
    <string name="label_help">Help</string>
    <string name="message_master_passw_required">A master password is required to access settings</string>
    <string name="message_wrong_passw">Wrong password</string>
    <string name="message_empty_passwords">There are no available passwords. The program is open now, and it is going to work without them.</string>
    <string name="subject_password_recover">Password recovered</string>
    <string name="text_password_recover">Your password is</string>
    
    <!-- Mail -->
    <string name="send_mail_status_ok">Email was sent successfully</string>
    <string name="send_mail_status_error">There was a problem sending the email. Are you connected to the internet?</string>
    <string name="send_mail_infor_one">An email is going to be sent to</string>
    <string name="send_mail_infor_two">Please, make sure that you have a established internet connection</string>
    <string name="button_send">Send</string>
    
    <!-- Rate -->
    <string name="label_rate_title">Rate</string>
    <string name="label_rate_message_1">If the </string>
    <string name="label_rate_message_2"> is being useful, please rate! Your opinion is very important! :)</string>
    <string name="label_rate_rate">Rate</string>
    <string name="label_rate_remind_later">Later</string>
    <string name="label_rate_no_thanks">No, thanks</string>
    
    <!-- phone types -->
    <string name="type_phone_home">Home</string>
    <string name="type_phone_mobile">Mobile</string>
    <string name="type_phone_work">Work</string>
    <string name="type_phone_mobile_work">Mobile work</string>
    
    <!-- All --> 
    <string name="sms_send">SMS sent</string>
    <string name="sms_not_send">Fail in send SMS</string>
    <string name="contact_not_found">No contact found</string>
    <string name="share_message">Check it out this app on Google Play: https://play.google.com/store/apps/details?id=com.viisi.droid.contactretrieve</string>
    <string name="share_via">Share via</string>

    <!-- Notification -->
    <string name="message_error_notification">An error occurred while trying to send SMS</string>
    <string name="message_success_notification">SMS successfully sent</string>
    
    <!-- Settings Layout -->
    <string name="sett_title_passw_label">Passwords</string>
    <string name="sett_title_manage_label">Manage</string>
    <string name="sett_passw_label">Password for authentication</string>
    <string name="sett_list_passw">Passwords saved</string>
    <string name="sett_hint_passw">Password</string>
    <string name="sett_hint_trustednumber">Trusted number</string>
    <string name="sett_hint_trustednumbers">Trusted numbers</string>
    <string name="sett_hint_passwauth">Authentication passwords</string>
    <string name="sett_message_passw_delete">Are you sure you want to delete?</string>
    <string name="sett_button_add_passw">Insert</string>
    <string name="sett_button_findcontact">Find</string>
    <string name="sett_button_delall_passw">Delete all</string>
    <string name="sett_toast_invalid_passw">Invalid value</string>
    <string name="sett_hint_change_mail">New mail address</string>
    <string name="sett_hint_change_masterpassw">New master password</string>
    <string name="sett_text_change_mail">Current mail</string>
    <string name="sett_change_mail_ok">Changed!</string>
    <string name="sett_change_mail_button">Change mail</string>
    <string name="sett_change_maspwss_button">Change master password</string>
    
    <!-- Settings -->
    <string name="security_title">Security</string>
    <string name="security_addPassword">Add password</string>
    <string name="security_sumary">Add a password to the list</string>
    
    <!-- Help -->
    <string name="title_howto">How it works</string>
    <string name="title_master_password">Master password</string>
    <string name="title_passwords">Passwords</string>
    <string name="title_symbol">Symbols</string>
    <string name="title_costs">Costs</string>
    <string name="title_about">About</string>
    <string name="text_howto">Have you forgotten your mobile and need some contact of which only you have the number? No problem…\nThis application retrieves contact numbers that you want with a single text message (SMS)!\n\n
		It Works like this:\n
		Use someone else\'s phone to send a text message (SMS) to your phone in the following format:\n
		<b>#1 <i>name</i></b>\nwhere instead of <i>name</i> type the contact name that you want to retrieve.\nExamples:\n
		<b>#1 tiago</b>\n
		<b>#1 amy</b>\nWith that, your cell phone will automatically return a text message (SMS) to the device from which you sent, with the contacts and their numbers that you\'ve requested.\n\nThis application doesn\'t do any distinction between uppercase and lowercase, which means that
		<b>#1 tiago</b> is the same as <b>#1 TIAGO</b>\n\nIt\'s also possible to search contacts with parts of the name.\nExample:\n
		<b>#1 iago</b>\nIn this case, the application will return all contacts that contains iago as the name part (Tiago Emerick, Iago Zerber, Hiago, etc…)\n\nTo search for contacts, the name you\'re going to send should have at least 3 characters.
    </string>
    <string name="text_passwords">For your best security, this application make uses of passwords to search the contacts, but it doesn\'t mean that they are required.\nIf you just install the application and don\'t do anything else, it\'ll works without passwords witch means that anyone can send a text messagem to your device and request many contatcs as he wants.\nBut if you create passwords, the application will only work if you send the password in the text message.\n\n
		How it works:\nCreate many passwords as you want on menu <i>Preferences</i>.\nWhen you are using someones phone to search any contact, send a text message (SMS) to your device in the following format:\n
		<b>#1 <i>name</i>!<i>password</i></b>\nwhere instead of <i>name</i> type the contact name that you want to retrieve and instead of <i>password</i> type one of the passwords that you have registered.\nExamples:\n
		<b>#1 tiago!xpto</b>\nWith that your cell phone will automatically return a text message (SMS) to the device from whitch you sent, with the contacts and their numbers that you\'ve requested and will automatically <b>disable</b> the used password.\nIf you want to search others contatcs, you will have to send a new text message to your device using another password. If all your passwords end up, the application will work without them.\n
		If all your passwords end up, just send a text message to your device in the original format:\n
		<b>#1 <i>name</i></b> being no longer necessary to use signal ! to separate the password.\n\nCase you\'ve forgotten all passwords, you can see them using your <i>master password</i>. To do that send a text message to your device in the following format:\n
		<b>#1 $<i>masterPassword</i></b>\nwhere instead of <i>masterPassword</i> type your master password previously registered.\nWith that your cell phone will automatically return a text message (SMS) to the device from whitch you sent, with all registered passwords. Now just choose one of them to search for contacts.
   	</string>
    <string name="text_master_password">What\'s master password?\n\nThe master password is used to access the <i>Preferences</i> menu. There you can register security passwords. The security passwords is for ensure the application only works if you type one of them on original text message.\nTo learn more about security passwords, access <i>Help</i> menu and <i>Passwords</i> option.\n\n
		Master passwords is also used, if you forget all your security passwords, to retrieve all.\nTo do this, send a text message to your device in the followin format:\n
		<b>#1 $<i>masterPassword</i></b>\nwhere instead of <i>masterPassword</i> type your master password previously registered.\nWith that your cell phone will automatically return a text message (SMS) to the device from whitch you sent, with all registered passwords. Now just choose one of them to search for contacts.
    </string>
    <string name="text_symbols">Fast shortcuts to the used symbols in application:\n\n
		<b>#1</b> - Identifier used by application to determine if the SMS that is being received is to search for contacts.\nExample:\n
		<b>#1 <i>name</i></b>\n\n
		<b>!</b>  - Identifier used to separate the contact name of security password.\nExample:\n
		<b>#1 <i>name</i>!<i>password</i></b>\n\n
		<b>$</b>  - Identifier used to retrieve all security passwords using master password.\nExample:\n
		<b>#1 $<i>masterPassword</i></b>
    </string>
    <string name="text_costs">The application additional costs are based on a simple text message.\n\n
		When you use someone else\'s phone to send a text message to your device and search for a contact, you will spending the amount of a single common text message (SMS) from person that has lend you his device
		and a single or more (depending on text message length response) common text message (SMS) that will be sent automatically from your device with contact searched.\n\n
		If you want to access <b>Recover Master Password</b> menu, make sure that you have a established internet connection. This menu option will send an email to the previously registered email with a master password in attachment.\nIn this case pay attention to additional cost of 3G∕4G connection.
    </string>
    <string name="text_about"><b>Name: </b>Tiago Anozé Emerick\n<b>Age: 25\n</b><b>Living: </b>Brazil\n<b>About me: </b>Self-taught. I like new challenges and sports in general.\n\n Like it? Reviews? Suggestions? Compliments?\n\n<b>Contact me: </b>tiagoemerick@gmail.com
    </string>
    
</resources>