<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textPasswLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sett_passw_label" />

    <EditText
        android:id="@+id/textPassw"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textPasswLabel"
        android:hint="@string/sett_hint_passw"
        android:inputType="text" >
    </EditText>

    <Button
        android:id="@+id/addPassw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textPassw"
        android:layout_alignBottom="@+id/textPassw"
        android:layout_alignParentRight="true"
        android:text="@string/sett_button_add_passw" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textPassw" >

        <com.sileria.android.SlidingTray
            android:id="@+id/drawer"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:content="@+id/content"
            android:handle="@+id/handle" >

            <Button
                android:id="@+id/handle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:text="@string/sett_list_passw" />

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/mylist"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
                </ListView>
            </LinearLayout>
        </com.sileria.android.SlidingTray>
    </FrameLayout>

    <Button
        android:id="@+id/delAll"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:text="@string/sett_button_delall_passw" />

</RelativeLayout>